[tool.poetry]
name = "commudusmapserver"
version = "0.1.0"
description = ""
authors = ["KeisariJulma <anttijussi.oksa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
