[tool.poetry]
name = "commudusmapserver"
version = "0.1.0"
description = ""
authors = ["KeisariJulma <placeholder@email>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
email-validator = "^2.3.0"
python-jose = "^3.5.0"
python-multipart = "^0.0.20"
firebase-admin = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
